--- a/FInal_Project_GradCAM.ipynb
+++ b/FInal_Project_GradCAM.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: ./sample_data: No such file or directory\n",
+      "Cloning into 'XAI_FinalProject_GradCAM'...\n",
+      "remote: Enumerating objects: 9, done.\u001b[K\n",
+      "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+      "remote: Total 9 (delta 0), reused 3 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+      "Receiving objects: 100% (9/9), done.\n",
+      "[Errno 20] Not a directory: 'XAI_FinalProject_GradCAM/Final_Project_GradCAM.ipynb'\n",
+      "/Users/akalpitdawkhar/Desktop/School/SEM 3/XAI/XAI_FinalProject_GradCAM\n",
+      "Final_Project_GradCAM.ipynb  \u001b[34mXAI_FinalProject_GradCAM\u001b[m\u001b[m/\n",
+      "README.md                    requirements.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# Please use this to connect your GitHub repository to your Google Colab notebook\n",
     "# Connects to any needed files from GitHub and Google Drive\n",
@@ -27,11 +45,32 @@
     "%cd \"{path_to_notebook}\"\n",
     "%ls"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
